Completed Login flow

--- a/FreeFood/FreeFood/Info.plist
+++ b/FreeFood/FreeFood/Info.plist
@@ -8,9 +8,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.638185583048-cv87c7jbk6bmpoq5in6cnt0hndorpa6r</string>
-			</array>
+			<array/>
 		</dict>
 		<dict>
 			<key>CFBundleTypeRole</key>
